Fix header reflow on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -203,7 +203,6 @@ label {
 	overflow: visible;
 	z-index: 10;
 	position: relative;
-	height: 100%;
 }
 
 .dropdown-button {
